# Mandrel

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  deny.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/artifact/: Cargo.toml
crates/artifact/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: attention.rs  lib.rs  matmul.rs  plan.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/device/: Cargo.toml
crates/device/src/: lib.rs
crates/experiment/: Cargo.toml
crates/experiment/src/: lib.rs
crates/ggml-adapter/: Cargo.toml
crates/ggml-adapter/src/: lib.rs
crates/hardware/: Cargo.toml
crates/hardware/src/: lib.rs
crates/kernel-ir/: Cargo.toml
crates/kernel-ir/src/: catalog.rs  launch.rs  lib.rs  symbol.rs
crates/kernels/: Cargo.toml
crates/kernels/src/: lib.rs
crates/model-ir/: Cargo.toml
crates/model-ir/src/: lib.rs
crates/profiler/: Cargo.toml
crates/profiler/src/: estimate.rs  lib.rs  trace.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/schedule/: Cargo.toml
crates/schedule/src/: affine.rs  attention.rs  error.rs  layout.rs  lib.rs  matmul.rs
crates/target-ir/: Cargo.toml
crates/target-ir/src/: lib.rs
crates/vortex-backend/: Cargo.toml
crates/vortex-backend/include/: mandrel_vortex.h
crates/vortex-backend/src/: artifact.rs  attention_plan.rs  backend.rs  demo.rs  executor.rs  ffi.rs  lib.rs  matmul.rs  toolchain.rs  vortex2.rs
crates/vortex-backend/src/codegen/: attention_mlir.rs  cpp.rs  device_ir.rs  llvm_ir.rs  matmul.rs  matmul_abi.rs  matmul_llvm.rs  matmul_tiled_llvm.rs  mod.rs
crates/vortex-codegen/: Cargo.toml
crates/vortex-codegen/src/: lib.rs
crates/vortex-codegen/src/codegen/: attention_mlir.rs  device_ir.rs  device_ir_mlir.rs  hardware_identity_mlir.rs  kernel.rs  mlir.rs  mod.rs  vortex_ir.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: cli.rs  command.rs  error.rs  logging.rs  main.rs  moe.rs
crates/xtask/src/attention/: artifacts.rs  compare.rs  input.rs  metrics.rs  mod.rs  plan.rs  report.rs  runtime.rs
crates/xtask/src/attention/trace/: collect.rs  history.rs  jsonl.rs  mod.rs  print.rs
crates/xtask/src/vortex/: environment.rs  install.rs  mod.rs  runtime.rs  source_toolchain.rs  status.rs  system_tools.rs
docs/: codesign-architecture.md  design.md  llm-serving-kv-attention-survey.md  mission.md  mlir.md  roadmap.md
experiments/: README.md
hardware/vortex/: README.md  source.lock.toml
hardware/vortex/configs/: current-default.toml
hardware/vortex/patches/: 0001-rtlsim-allow-non-fatal-verilator-warnings.patch  0002-rtl-expose-mandrel-config-identity-csr.patch  README.md
scripts/env/: _lib.sh  check.sh  materialize-vortex-config.py  setup-llvm-vortex.sh  setup-verilator.sh  setup-vortex.sh  setup.sh  vortex-env.sh
src/: main.rs
