[package]
name = "mandrel-artifact"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["mandrel-kernel-ir/std"]

[dependencies]
mandrel-kernel-ir = { workspace = true, optional = true }

[lib]
name = "mandrel_artifact"
path = "src/lib.rs"

[lints]
workspace = true
