[package]
name = "mandrel-device"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["mandrel-core/std", "mandrel-kernel-ir/std"]

[dependencies]
mandrel-core = { workspace = true }
mandrel-kernel-ir = { workspace = true }

[lib]
name = "mandrel_device"
path = "src/lib.rs"

[lints]
workspace = true
