[package]
name = "mandrel-ggml-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["mandrel-core/std", "mandrel-device/std", "mandrel-model-ir/std"]

[dependencies]
mandrel-core = { workspace = true }
mandrel-device = { workspace = true }
mandrel-model-ir = { workspace = true }

[lib]
name = "mandrel_ggml_adapter"
path = "src/lib.rs"

[lints]
workspace = true
