[package]
name = "mandrel-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["mandrel-core/std"]

[dependencies]
libm = "0.2"
mandrel-core = { workspace = true }

[lib]
name = "mandrel_kernels"
path = "src/lib.rs"

[lints]
workspace = true
