[package]
name = "mandrel-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["mandrel-core/std", "mandrel-device/std", "mandrel-kernel-ir/std"]

[dependencies]
mandrel-core = { workspace = true }
mandrel-device = { workspace = true }
mandrel-kernel-ir = { workspace = true }

[lib]
name = "mandrel_runtime"
path = "src/lib.rs"

[lints]
workspace = true
