[package]
name = "mandrel-schedule"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["mandrel-core/std", "mandrel-model-ir/std", "snafu/std"]

[dependencies]
mandrel-core = { workspace = true }
mandrel-model-ir = { workspace = true }
snafu = { workspace = true }

[lib]
name = "mandrel_schedule"
path = "src/lib.rs"

[lints]
workspace = true
