[package]
name = "mandrel-vortex-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
mandrel-artifact = { workspace = true, features = ["std"] }
mandrel-kernel-ir = { workspace = true }

snafu = { workspace = true, features = ["std"] }
tracing = { workspace = true }

[dev-dependencies]
mandrel-compiler = { workspace = true }
mandrel-model-ir = { workspace = true }

[lib]
name = "mandrel_vortex_backend"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[lints]
workspace = true
