[package]
name = "mandrel-vortex-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
mandrel-kernel-ir = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = { workspace = true, features = ["std"] }
tracing = { workspace = true }

[dev-dependencies]
mandrel-compiler = { workspace = true }
mandrel-model-ir = { workspace = true }

[lib]
name = "mandrel_vortex_backend"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[lints]
workspace = true
