[package]
name = "mandrel-vortex-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
mandrel-compiler = { workspace = true }
mandrel-kernel-ir = { workspace = true }
mandrel-model-ir = { workspace = true }
mandrel-schedule = { workspace = true }
snafu = { workspace = true, features = ["std"] }

[lib]
name = "mandrel_vortex_codegen"
path = "src/lib.rs"

[lints]
workspace = true
