[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
mandrel-compiler = { workspace = true }
mandrel-model-ir = { workspace = true }
mandrel-profiler = { workspace = true }
mandrel-runtime = { workspace = true, features = ["std"] }
mandrel-vortex-backend = { workspace = true }
snafu = { workspace = true, features = ["std"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
